// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StarsCheckbox render checked 1`] = `
<Checkbox
  isChecked={true}
  onPress={[MockFunction]}
>
  <Text
    style={
      Object {
        "color": "#00a991",
        "fontSize": 16,
      }
    }
  >
    <Stars
      rating={5}
    />
  </Text>
</Checkbox>
`;

exports[`StarsCheckbox render unchecked with 1 star 1`] = `
<Checkbox
  onPress={[MockFunction]}
>
  <Text
    style={
      Object {
        "color": "#00a991",
        "fontSize": 16,
      }
    }
  >
    <Stars
      rating={1}
    />
  </Text>
</Checkbox>
`;

exports[`StarsCheckbox render unchecked with 3 stars 1`] = `
<Checkbox
  onPress={[MockFunction]}
>
  <Text
    style={
      Object {
        "color": "#00a991",
        "fontSize": 16,
      }
    }
  >
    <Stars
      rating={3}
    />
  </Text>
</Checkbox>
`;
